fix(core): fix .visible class missing and creating breaking change from v5

--- a/packages/simplebar-core/src/simplebar.css
+++ b/packages/simplebar-core/src/simplebar.css
@@ -147,16 +147,7 @@
   transition: opacity 0.2s 0.5s linear;
 }
 
-.simplebar-scrolling .simplebar-scrollbar:before,
-.simplebar-hover .simplebar-scrollbar:before,
-.simplebar-mouse-entered .simplebar-scrollbar:before {
-  opacity: 0.5;
-  transition-delay: 0s;
-  transition-duration: 0s;
-}
-
 .simplebar-scrollbar.simplebar-visible:before {
-  /* When hovered, remove all transitions from drag handle */
   opacity: 0.5;
   transition-delay: 0s;
   transition-duration: 0s;
